<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FIREGOTO</string>
    <string name="hello_world">Reginaldo!</string>
    <string name="action_settings">Settings</string>
    <string name="configurar_bluetooth">Configurar Bluetooth</string>
    <string name="title_activity_configura_bluetooth">Configura Bluetooth</string>
    <string name="status">Status</string>
    <string name="title_activity_status">Status</string>
    <string name="atualiza">Atualiza</string>
    <string name="S">S</string>
    <string name="N">N</string>
    <string name="L">L</string>
    <string name="O">O</string>
    <string name="NE">NE</string>
    <string name="STOP">Stop</string>
    <string name="NO">NO</string>
    <string name="SE">SE</string>
    <string name="SO">SO</string>
    <string name="lat">Lat:</string>
    <string name="log">Log:</string>
    <string name="RA">RA:</string>
    <string name="DEC">DEC:</string>
    <string name="hora">LMT:</string>
    <string name="data">Data UTC:</string>
    <string name="UTC">UTC:</string>
    <string name="LST">LST:</string>
    <string name="doispontos">:</string>
    <string name="Aspasduplas">\"</string>
    <string name="Aspa">\'</string>
    <string name="barra">"/"</string>
    <string name="Grau">°</string>
    <string name="Mais">+</string>
    <string name="Menos">-</string>
    <string name="PassoRa">Passos RA(ALt)</string>
    <string name="PassoDec">Passos DEC(Az)</string>
    <string name="Timer">Pulso</string>
    <string name="ms">mseg</string>
    

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="atualizar">Atualizar</string>
    <string name="selecione_para_atualizar">Selecione para Atualizar</string>
    <string name="controle">Controle</string>
    <string name="title_activity_mostrar_controle">Controle</string>
    <string name="guia">G</string>
    <string name="centro">C</string>
    <string name="rapido">R</string>
    <string name="localizar">L</string>
    <string name="selecione_a_velociadade_">Selecione a velociadade:</string>
    <string name="coordenada_atual_">Coordenada atual:</string>
    <string name="coordenada_alvo_">Coordenada alvo:</string>
    <string name="antes_de_continuar_configure_seu_bluetooth">Antes de continuar configure seu bluetooth</string>
    <string name="este_dispositivo_n_suporta_bluetooth">Este dispositivo não suporta bluetooth</string>
    <string name="az">AZ</string>
    <string name="alt">ALT</string>
    <string name="goto_sync">Goto/Sync</string>
    <string name="title_activity_goto_sync">GOTO SYNC</string>
    <string name="alvo_dec">Alvo DEC:</string>
    <string name="alvo_ra">Alvo RA:</string>
    <string name="sync">Sync</string>
    <string name="Syncro">Syncronize</string>
    <string name="gotu">Goto</string>
    <string name="ok">OK</string>
    <string name="menu">Menu</string>
    <string name="acompanhamento">Acompanhamento</string>
    <string name="localizar_deep">"Procurar Obj:"</string>
    <string name="find_devices">Find Devices</string>
    <string name="title_activity_creditos_active">Creditos</string>
    <string name="Creditos">About</string>
    <string name="vamos_la">Vamos la</string>
    <string name="abaixo_do_horizonte">Abaixo do Horizonte</string>
    <string name="atualizado">Atualizado</string>
    <string name="deu_erro">Deu Erro</string>
    <string name="title_activity_hw">HW Tunning</string>
    <string name="fire_hw">FIRE HW</string>
    
    <string name="HelpH">Calculo de Passos e: \nReducao total x Num. de passo do motor x Num. de micro passo</string>
        <string name="HelpH2">Pulso em "Milissegundo" e deverá ser superior a 150 ms</string>
    

</resources>