<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.astronomoamador.firgoto.MainActivity" >

    <Button
        android:id="@+id/btnConexao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:onClick="configurarBluetooth"
        android:text="@string/configurar_bluetooth" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnConexao"
        android:layout_centerHorizontal="true"
        android:onClick="mostrarStatus"
        android:text="@string/status" />

    <Button
        android:id="@+id/buttonControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="mostrarControle"
        android:text="@string/controle" />

    <Button
        android:id="@+id/buttonGotoSync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonControl"
        android:layout_centerHorizontal="true"
        android:onClick="mostrarGotosync"
        android:text="@string/goto_sync" />

    <Button
        android:id="@+id/ButtonCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonControl"
        android:layout_below="@+id/buttonGotoSync"
        android:layout_marginTop="26dp"
        android:onClick="mostrarCredito"
        android:text="@string/Creditos" />

</RelativeLayout>
