<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="br.com.astronomoamador.firgoto.StatusActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Switch
            android:id="@+id/switchNS"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/log"
            android:textOff="@string/N"
            android:textOn="@string/S"
            android:textSize="@dimen/Grande"
            android:textStyle="normal"
            android:typeface="normal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textGrauLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Grau"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textMinLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aspa"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textSegLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aspasduplas"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Switch
            android:id="@+id/switchLO"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lat"
            android:textOff="@string/L"
            android:textOn="@string/O"
            android:textSize="@dimen/Grande"
            android:textStyle="normal"
            android:typeface="normal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textGrauLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Grau"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textMinlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aspa"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textSegLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Aspasduplas"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/hora"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textHoraTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doispontos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>

        <TextView
            android:id="@+id/textMinTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doispontos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="textPostalAddress" >
        </EditText>
    </LinearLayout>

</LinearLayout>