<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.astronomoamador.firgoto.HWActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/selecione_para_atualizar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/Grande" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPassoRa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PassoRa"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/Grande" />

        <EditText
            android:id="@+id/editPassoRa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="number" >
        </EditText>

        <CheckBox
            android:id="@+id/checkBoxPassoRa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextViewPassoDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/PassoDec"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/Grande" />

        <EditText
            android:id="@+id/editTextPassoDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:inputType="number" >
        </EditText>

        <CheckBox
            android:id="@+id/CheckBoxPassoDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Timer"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:inputType="number" >
        </EditText>

        <TextView
            android:id="@+id/textMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ms"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/CheckBoxTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonHW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="atualizarHW"
        android:text="@string/atualizar" />

    <TextView
        android:id="@+id/textHelpH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.52"
        android:text="@string/HelpH"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textHelpH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/HelpH2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>